--- a/FmsUserManager/pom.xml
+++ b/FmsUserManager/pom.xml
@@ -62,10 +62,25 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
+		
+		<dependency>
+ 			 <groupId>org.springframework.boot</groupId>
+  			 <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+    		<groupId>org.projectlombok</groupId>
+    		<artifactId>lombok</artifactId>
+    		<version>1.16.20</version>
+    		<scope>provided</scope>
+		</dependency>
+		
 		
 
 
